changed button msg

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <label for="blue" class="blue">Blue:</label>
                 </div>
             </div>
-            <button class="copy">Copy Code</button>
+            <button class="copy">Copy Color Code</button>
             <button class="btn">Generate Random Color</button>
 
         </div>
